--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/helper-plugin-utils": "^7.18.6",
     "@babel/template": "^7.18.6",
     "@babel/types": "^7.18.8",
+    "chalk": "^4",
     "lodash": "^4.17.21",
     "typescript": "^4.7.4"
   },
